@@ -1,3 +1,7 @@
+2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* Added include file to solve problem with Ogre's memory manager messing with atlas.
+
 2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* Moved foliage to class Foliage. The grass is now randomly rotated and scaled.
